tests/ui/has-arguments.stderr
error: this attribute takes no arguments

         = help: use `#[server_send]`

 --> tests/ui/has-arguments.rs:3:1
  |
3 | #[server_send(a, b)]
  | ^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `server_send` (in Nightly builds, run with -Z macro-backtrace for more info)
